Bare minimum to run (on Fabric).