@@ -1,24 +1,28 @@
 package net.merchantpug.bovinesandbuttercups.content.entity;
 
-import com.williambl.dfunc.api.DFunctions;
-import com.williambl.vampilang.stdlib.StandardVTypes;
 import net.merchantpug.bovinesandbuttercups.BovinesAndButtercups;
-import net.merchantpug.bovinesandbuttercups.api.BovinesResourceKeys;
-import net.merchantpug.bovinesandbuttercups.api.ConfiguredCowType;
 import net.merchantpug.bovinesandbuttercups.api.CowType;
 import net.merchantpug.bovinesandbuttercups.api.CowTypeConfiguration;
+import net.merchantpug.bovinesandbuttercups.api.cowtype.OffspringConditionsConfiguration;
 import net.merchantpug.bovinesandbuttercups.content.block.entity.CustomFlowerBlockEntity;
+import net.merchantpug.bovinesandbuttercups.content.component.ItemCustomFlower;
+import net.merchantpug.bovinesandbuttercups.content.component.ItemMoobloomType;
+import net.merchantpug.bovinesandbuttercups.content.component.NectarEffects;
 import net.merchantpug.bovinesandbuttercups.content.configuration.MoobloomConfiguration;
-import net.merchantpug.bovinesandbuttercups.content.item.NectarBowlItem;
 import net.merchantpug.bovinesandbuttercups.mixin.EntityAccessor;
 import net.merchantpug.bovinesandbuttercups.registry.BovinesBlocks;
+import net.merchantpug.bovinesandbuttercups.registry.BovinesCowTypeTypes;
 import net.merchantpug.bovinesandbuttercups.registry.BovinesCowTypes;
 import net.merchantpug.bovinesandbuttercups.registry.BovinesCriteriaTriggers;
+import net.merchantpug.bovinesandbuttercups.registry.BovinesDataComponents;
 import net.merchantpug.bovinesandbuttercups.registry.BovinesEntityTypes;
 import net.merchantpug.bovinesandbuttercups.registry.BovinesItems;
+import net.merchantpug.bovinesandbuttercups.registry.BovinesLootContextParamSets;
+import net.merchantpug.bovinesandbuttercups.registry.BovinesRegistryKeys;
 import net.merchantpug.bovinesandbuttercups.registry.BovinesSoundEvents;
-import net.merchantpug.bovinesandbuttercups.util.HolderUtil;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.Holder;
+import net.minecraft.core.HolderSet;
 import net.minecraft.core.Registry;
 import net.minecraft.core.particles.ParticleOptions;
 import net.minecraft.core.particles.ParticleTypes;
@@ -27,13 +31,13 @@ import net.minecraft.nbt.Tag;
 import net.minecraft.network.syncher.EntityDataAccessor;
 import net.minecraft.network.syncher.EntityDataSerializers;
 import net.minecraft.network.syncher.SynchedEntityData;
-import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.sounds.SoundSource;
 import net.minecraft.tags.BlockTags;
 import net.minecraft.util.Mth;
 import net.minecraft.util.RandomSource;
+import net.minecraft.util.random.WeightedEntry;
 import net.minecraft.world.DifficultyInstance;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.InteractionResult;
@@ -57,17 +61,22 @@ import net.minecraft.world.item.Items;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.LevelAccessor;
 import net.minecraft.world.level.ServerLevelAccessor;
+import net.minecraft.world.level.biome.Biome;
 import net.minecraft.world.level.block.FlowerBlock;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.gameevent.GameEvent;
+import net.minecraft.world.level.storage.loot.LootContext;
+import net.minecraft.world.level.storage.loot.LootParams;
+import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 import net.minecraft.world.phys.Vec3;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.EnumSet;
 import java.util.List;
-import java.util.Map;
+import java.util.Optional;
 import java.util.UUID;
 
 public class Moobloom extends Cow {
@@ -76,11 +85,12 @@ public class Moobloom extends Cow {
     private static final EntityDataAccessor<Integer> POLLINATED_RESET_TICKS = SynchedEntityData.defineId(Moobloom.class, EntityDataSerializers.INT);
     private static final EntityDataAccessor<Integer> STANDING_STILL_FOR_BEE_TICKS = SynchedEntityData.defineId(Moobloom.class, EntityDataSerializers.INT);
     private static final EntityDataAccessor<Boolean> ALLOW_SHEARING = SynchedEntityData.defineId(Moobloom.class, EntityDataSerializers.BOOLEAN);
-    private ConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>> type;
+    private Holder<CowType<?>> type;
     @Nullable
     public Bee bee;
     private boolean hasRefreshedDimensionsForLaying;
     @Nullable private UUID lastLightningBoltUUID;
+    private final List<Vec3> particlePositions = new ArrayList<>();
 
     public Moobloom(EntityType<? extends Moobloom> entityType, Level level) {
         super(entityType, level);
@@ -88,13 +98,13 @@ public class Moobloom extends Cow {
     }
 
     @Override
-    protected void defineSynchedData() {
-        super.defineSynchedData();
-        this.entityData.define(TYPE_ID, "bovinesandbuttercups:missing");
-        this.entityData.define(PREVIOUS_TYPE_ID, "");
-        this.entityData.define(POLLINATED_RESET_TICKS, 0);
-        this.entityData.define(STANDING_STILL_FOR_BEE_TICKS, 0);
-        this.entityData.define(ALLOW_SHEARING, true);
+    protected void defineSynchedData(SynchedEntityData.Builder builder) {
+        super.defineSynchedData(builder);
+        builder.define(TYPE_ID, "bovinesandbuttercups:missing_moobloom");
+        builder.define(PREVIOUS_TYPE_ID, "");
+        builder.define(POLLINATED_RESET_TICKS, 0);
+        builder.define(STANDING_STILL_FOR_BEE_TICKS, 0);
+        builder.define(ALLOW_SHEARING, true);
     }
 
     @Override
@@ -107,12 +117,12 @@ public class Moobloom extends Cow {
     @Override
     public void addAdditionalSaveData(CompoundTag compound) {
         super.addAdditionalSaveData(compound);
-        compound.putString("Type", this.getTypeId());
+        compound.putString("Type", getTypeId());
         if (!this.getPreviousTypeId().equals("")) {
-            compound.putString("PreviousType", this.getPreviousTypeId());
+            compound.putString("PreviousType", getPreviousTypeId());
         }
-        compound.putInt("PollinatedResetTicks", this.getPollinatedResetTicks());
-        compound.putBoolean("AllowShearing", this.shouldAllowShearing());
+        compound.putInt("PollinatedResetTicks", getPollinatedResetTicks());
+        compound.putBoolean("AllowShearing", shouldAllowShearing());
     }
 
     @Override
@@ -144,17 +154,17 @@ public class Moobloom extends Cow {
     public void thunderHit(ServerLevel level, LightningBolt bolt) {
         UUID uuid = bolt.getUUID();
         if (!uuid.equals(this.lastLightningBoltUUID)) {
-            if (this.getPreviousTypeId().equals("")) {
-                if (this.getMoobloomType().configuration().settings().thunderConverts().isEmpty()) {
+            if (getPreviousTypeId().equals("")) {
+                if (getMoobloomType().value().configuration().settings().thunderConverts().isEmpty()) {
                     super.thunderHit(level, bolt);
                     return;
                 }
-                this.setPreviousTypeId(this.getTypeId());
+                setPreviousTypeId(getTypeId());
 
-                List<MoobloomConfiguration.WeightedConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>>> compatibleList = new ArrayList<>();
+                List<MoobloomConfiguration.WeightedConfiguredCowType<MoobloomConfiguration>> compatibleList = new ArrayList<>();
                 int totalWeight = 0;
 
-                for (CowTypeConfiguration.WeightedConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>> weightedCowType : this.getMoobloomType().configuration().settings().thunderConverts().get()) {
+                for (CowTypeConfiguration.WeightedConfiguredCowType<MoobloomConfiguration> weightedCowType : getMoobloomType().value().configuration().settings().thunderConverts()) {
                     if (weightedCowType.weight() > 0) {
                         compatibleList.add(weightedCowType);
                     }
@@ -164,32 +174,32 @@ public class Moobloom extends Cow {
                     super.thunderHit(level, bolt);
                     return;
                 } else if (compatibleList.size() == 1) {
-                    this.setFlowerType(compatibleList.get(0).configuredCowType().toString());
+                    setFlowerType(compatibleList.getFirst().cowType(), level);
                 } else {
-                    for (CowTypeConfiguration.WeightedConfiguredCowType cct : compatibleList) {
+                    for (CowTypeConfiguration.WeightedConfiguredCowType<MoobloomConfiguration> cct : compatibleList) {
                         totalWeight -= cct.weight();
                         if (totalWeight <= 0) {
-                            this.setFlowerType(cct.configuredCowType().toString());
+                            setFlowerType(cct.cowType(), level);
                             break;
                         }
                     }
                 }
             } else {
-                this.setFlowerType(this.getPreviousTypeId());
-                this.setPreviousTypeId("");
+                setFlowerType(this.getPreviousTypeId());
+                setPreviousTypeId("");
             }
-            this.lastLightningBoltUUID = uuid;
-            this.playSound(BovinesSoundEvents.MOOBLOOM_CONVERT.value(), 2.0F, 1.0F);
+            lastLightningBoltUUID = uuid;
+            playSound(BovinesSoundEvents.MOOBLOOM_CONVERT, 2.0F, 1.0F);
         }
     }
 
     @Override
     public boolean hurt(DamageSource source, float amount) {
-        if (this.isInvulnerableTo(source)) {
+        if (isInvulnerableTo(source)) {
             return false;
         }
-        if (bee != null && !this.level().isClientSide()) {
-            this.setStandingStillForBeeTicks(0);
+        if (bee != null && !level().isClientSide()) {
+            setStandingStillForBeeTicks(0);
             bee = null;
         }
         return super.hurt(source, amount);
@@ -197,28 +207,28 @@ public class Moobloom extends Cow {
 
     @Override
     public void tick() {
-        if (bee != null && !bee.isAlive() && !this.level().isClientSide()) {
-            this.setStandingStillForBeeTicks(0);
+        if (bee != null && !bee.isAlive() && !level().isClientSide()) {
+            setStandingStillForBeeTicks(0);
             bee = null;
         }
-        if (this.getStandingStillForBeeTicks() > 0 && !this.level().isClientSide())
-            this.setStandingStillForBeeTicks(this.getStandingStillForBeeTicks() - 1);
+        if (getStandingStillForBeeTicks() > 0 && !level().isClientSide())
+            setStandingStillForBeeTicks(getStandingStillForBeeTicks() - 1);
 
         super.tick();
-        if (this.getPollinatedResetTicks() > 0)
-            this.setPollinatedResetTicks(this.getPollinatedResetTicks() - 1);
+        if (getPollinatedResetTicks() > 0)
+            setPollinatedResetTicks(getPollinatedResetTicks() - 1);
 
-        if (this.getStandingStillForBeeTicks() > 0) {
+        if (getStandingStillForBeeTicks() > 0) {
             if (!hasRefreshedDimensionsForLaying) {
-                this.refreshDimensions();
-                ((EntityAccessor)this).bovinesandbuttercups$setEyeHeight(this.getDimensions(this.getPose()).height * 0.85F);
+                refreshDimensions();
+                ((EntityAccessor)this).bovinesandbuttercups$setEyeHeight(getDimensions(getPose()).height() * 0.85F);
                 hasRefreshedDimensionsForLaying = true;
             }
-            if (!this.level().isClientSide() && this.bee != null)
-                this.getLookControl().setLookAt(bee);
+            if (!level().isClientSide() && bee != null)
+                getLookControl().setLookAt(bee);
         } else if (hasRefreshedDimensionsForLaying) {
-            this.refreshDimensions();
-            ((EntityAccessor)this).bovinesandbuttercups$setEyeHeight(this.getDimensions(this.getPose()).height * 0.85F);
+            refreshDimensions();
+            ((EntityAccessor)this).bovinesandbuttercups$setEyeHeight(getDimensions(getPose()).height() * 0.85F);
             hasRefreshedDimensionsForLaying = false;
         }
     }
@@ -227,13 +237,13 @@ public class Moobloom extends Cow {
         if (this.level().isClientSide) return;
 
         BlockState state = null;
-        if (this.getMoobloomType().configuration().flower().blockState().isPresent())
-            state = this.getMoobloomType().configuration().flower().blockState().get().getBlock().defaultBlockState();
-        else if (this.getMoobloomType().configuration().flower().customType().isPresent())
-            state = BovinesBlocks.CUSTOM_FLOWER.value().defaultBlockState();
+        if (getMoobloomType().value().configuration().flower().blockState().isPresent())
+            state = getMoobloomType().value().configuration().flower().blockState().get().getBlock().defaultBlockState();
+        else if (getMoobloomType().value().configuration().flower().customType().isPresent())
+            state = BovinesBlocks.CUSTOM_FLOWER.defaultBlockState();
 
         if (state == null) {
-            BovinesAndButtercups.LOG.warn("Moobloom with type '{}' tried to spread flowers without a valid flower type.", this.level().registryAccess().registry(BovinesResourceKeys.CONFIGURED_COW_TYPE).orElseThrow().getKey(getMoobloomType()));
+            BovinesAndButtercups.LOG.warn("Moobloom with type '{}' tried to spread flowers without a valid flower type.", getMoobloomType().getRegisteredName());
             return;
         }
 
@@ -243,7 +253,7 @@ public class Moobloom extends Cow {
         for(int i = 0; i < maxTries; ++i) {
             pos.setWithOffset(this.blockPosition(), random.nextInt(xZScale) - random.nextInt(xZScale), random.nextInt(2) - random.nextInt(2), random.nextInt(xZScale) - random.nextInt(xZScale));
             if (state.canSurvive(this.level(), pos) && this.level().getBlockState(pos).isAir())
-                this.setBlockToFlower(state, pos);
+                setBlockToFlower(state, pos);
         }
         this.gameEvent(GameEvent.BLOCK_PLACE, this);
     }
@@ -251,11 +261,11 @@ public class Moobloom extends Cow {
     public void setBlockToFlower(BlockState state, BlockPos pos) {
         if (this.level().isClientSide) return;
         ((ServerLevel) this.level()).sendParticles(ParticleTypes.HAPPY_VILLAGER, pos.getX() + 0.5D, pos.getY() + 0.3D, pos.getZ() + 0.5D, 4, 0.2, 0.1, 0.2, 0.0);
-        if (state.getBlock() == BovinesBlocks.CUSTOM_FLOWER.value() && this.getMoobloomType().configuration().flower().customType().isPresent()) {
+        if (state.getBlock() == BovinesBlocks.CUSTOM_FLOWER && this.getMoobloomType().value().configuration().flower().customType().isPresent()) {
             this.level().setBlock(pos, state, 3);
             BlockEntity blockEntity = this.level().getBlockEntity(pos);
             if (blockEntity instanceof CustomFlowerBlockEntity customFlowerBlockEntity) {
-                customFlowerBlockEntity.setFlowerTypeName(this.level().registryAccess().registry(BovinesResourceKeys.CUSTOM_FLOWER_TYPE).orElseThrow().getKey(this.getMoobloomType().configuration().flower().customType().get().value()).toString());
+                customFlowerBlockEntity.setCustomFlower(new ItemCustomFlower(getMoobloomType().value().configuration().flower().customType().get()));
                 customFlowerBlockEntity.setChanged();
             }
         } else {
@@ -264,11 +274,11 @@ public class Moobloom extends Cow {
     }
 
     @Override
-    public EntityDimensions getDimensions(Pose pose) {
+    public EntityDimensions getDefaultDimensions(Pose pose) {
         if (this.getStandingStillForBeeTicks() > 0) {
-            return super.getDimensions(pose).scale(1.0F, 0.7F);
+            return super.getDefaultDimensions(pose).scale(1.0F, 0.7F);
         }
-        return super.getDimensions(pose);
+        return super.getDefaultDimensions(pose);
     }
 
     @Override
@@ -283,40 +293,53 @@ public class Moobloom extends Cow {
                     ((ServerLevel) this.level()).sendParticles(ParticleTypes.HAPPY_VILLAGER, this.position().x(), this.position().y() + 1.6D, this.position().z(), 8, 0.5, 0.1, 0.4, 0.0);
                 }
                 this.spreadFlowers();
-                this.playSound(BovinesSoundEvents.MOOBLOOM_EAT.value(), 1.0f, (random.nextFloat() * 0.4F) + 0.8F);
+                this.playSound(BovinesSoundEvents.MOOBLOOM_EAT, 1.0f, (random.nextFloat() * 0.4F) + 0.8F);
                 return InteractionResult.sidedSuccess(this.level().isClientSide);
             } else if (itemStack.is(Items.BOWL)) {
                 ItemStack itemStack2;
-                itemStack2 = new ItemStack(BovinesItems.NECTAR_BOWL.value());
-                if (this.getMoobloomType().configuration().nectarEffect().isPresent()) {
-                    NectarBowlItem.saveMobEffect(itemStack2, this.getMoobloomType().configuration().nectarEffect().get().getEffect(), this.getMoobloomType().configuration().nectarEffect().get().getDuration());
-                } else if (this.getMoobloomType().configuration().flower().blockState().isPresent() && this.getMoobloomType().configuration().flower().blockState().get().getBlock() instanceof FlowerBlock) {
-                    ((FlowerBlock)this.getMoobloomType().configuration().flower().blockState().get().getBlock()).getSuspiciousEffects().forEach(effectEntry ->  {
-                        NectarBowlItem.saveMobEffect(itemStack2, effectEntry.effect(), 600);
+                itemStack2 = new ItemStack(BovinesItems.NECTAR_BOWL);
+                if (!getMoobloomType().value().configuration().nectarEffects().effects().isEmpty()) {
+                    itemStack2.set(BovinesDataComponents.NECTAR_EFFECTS, getMoobloomType().value().configuration().nectarEffects());
+                } else if (getMoobloomType().value().configuration().flower().blockState().isPresent() && this.getMoobloomType().value().configuration().flower().blockState().get().getBlock() instanceof FlowerBlock) {
+                    ((FlowerBlock)getMoobloomType().value().configuration().flower().blockState().get().getBlock()).getSuspiciousEffects().effects().forEach(effectEntry -> {
+                        itemStack2.set(BovinesDataComponents.NECTAR_EFFECTS, itemStack2.getOrDefault(BovinesDataComponents.NECTAR_EFFECTS, new NectarEffects(List.of()).withEffectAdded(new NectarEffects.Entry(effectEntry.effect(), effectEntry.duration()))));
                     });
                 } else {
                     return InteractionResult.PASS;
                 }
 
-                NectarBowlItem.saveMoobloomTypeKey(itemStack2, this.level().registryAccess().registry(BovinesResourceKeys.CONFIGURED_COW_TYPE).orElseThrow().getKey(this.getMoobloomType()));
+                itemStack2.set(BovinesDataComponents.MOOBLOOM_TYPE, new ItemMoobloomType(getMoobloomType()));
                 ItemStack itemStack3 = ItemUtils.createFilledResult(itemStack, player, itemStack2, false);
                 player.setItemInHand(hand, itemStack3);
-                this.playSound(BovinesSoundEvents.MOOBLOOM_MILK.value(), 1.0f, 1.0f);
-                return InteractionResult.sidedSuccess(this.level().isClientSide);
+                this.playSound(BovinesSoundEvents.MOOBLOOM_MILK, 1.0f, 1.0f);
+                return InteractionResult.sidedSuccess(this.level().isClientSide());
             }
         }
         return super.mobInteract(player, hand);
     }
 
-    public ConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>> chooseBabyType(LevelAccessor level, Moobloom otherParent, Moobloom child) {
-        List<ConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>>> eligibleCowTypes = new ArrayList<>();
+    public Holder<CowType<MoobloomConfiguration>> chooseBabyType(ServerLevel level, Moobloom otherParent, Moobloom child) {
+        List<Holder<CowType<MoobloomConfiguration>>> eligibleCowTypes = new ArrayList<>();
 
-        for (ConfiguredCowType<?, ?> cowType : level.registryAccess().registry(BovinesResourceKeys.CONFIGURED_COW_TYPE).orElseThrow().stream().filter(type -> type.configuration() instanceof Moobloom).toList()) {
-            ConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>> flowerCowType = (ConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>>) cowType;
-            if (flowerCowType.configuration().offspringConditions().isEmpty()) continue;
-            var conditions = flowerCowType.configuration().offspringConditions().get();
+        for (Holder.Reference<CowType<?>> cowType : level.registryAccess().registry(BovinesRegistryKeys.COW_TYPE).orElseThrow().holders().filter(type -> type.isBound() && type.value().type() == BovinesCowTypeTypes.MOOBLOOM_TYPE).toList()) {
+            Holder.Reference<CowType<MoobloomConfiguration>> flowerCowType = (Holder.Reference) cowType;
+            if (flowerCowType.value().configuration().offspringConditions() == OffspringConditionsConfiguration.EMPTY) continue;
+            var conditions = flowerCowType.value().configuration().offspringConditions();
 
-            if (conditions.predicate().map(vExpression -> vExpression.evaluate(DFunctions.createEntityContext(this)).get(StandardVTypes.BOOLEAN)).orElse(true) && conditions.predicate().map(vExpression -> vExpression.evaluate(DFunctions.createEntityContext(otherParent)).get(StandardVTypes.BOOLEAN)).orElse(true))
+            LootParams.Builder params = new LootParams.Builder(level);
+            params.withParameter(LootContextParams.THIS_ENTITY, this);
+            params.withParameter(BovinesLootContextParamSets.PARTNER, otherParent);
+            params.withParameter(BovinesLootContextParamSets.CHILD, child);
+            params.withParameter(LootContextParams.ORIGIN, child.position());
+
+            LootContext thisContext = new LootContext.Builder(params.create(BovinesLootContextParamSets.BREEDING)).create(Optional.empty());
+
+            params.withParameter(LootContextParams.THIS_ENTITY, otherParent);
+            params.withParameter(BovinesLootContextParamSets.PARTNER, this);
+            LootContext otherContext = new LootContext.Builder(params.create(BovinesLootContextParamSets.BREEDING)).create(Optional.empty());
+
+            if (conditions.thisConditions().stream().allMatch(condition -> condition.test(thisContext))
+            && conditions.otherConditions().stream().allMatch(condition -> condition.test(otherContext)))
                 eligibleCowTypes.add(flowerCowType);
         }
 
@@ -324,11 +347,10 @@ public class Moobloom extends Cow {
             int random = this.getRandom().nextInt(eligibleCowTypes.size());
             var randomType = eligibleCowTypes.get(random);
 
-            // TODO: Particle creation upon a successful breed.
+            child.createParticles();
 
-            if (this.getLoveCause() != null && !level.registryAccess().registry(BovinesResourceKeys.CONFIGURED_COW_TYPE).orElseThrow().getKey(randomType).equals(level.registryAccess().registry(BovinesResourceKeys.CONFIGURED_COW_TYPE).orElseThrow().getKey(this.getMoobloomType())) && !level.registryAccess().registry(BovinesResourceKeys.CONFIGURED_COW_TYPE).orElseThrow().getKey(randomType).equals(level.registryAccess().registry(BovinesResourceKeys.CONFIGURED_COW_TYPE).orElseThrow().getKey(otherParent.getMoobloomType()))) {
-                BovinesCriteriaTriggers.MUTATION.trigger(this.getLoveCause(), this, otherParent, child, level.registryAccess().registry(BovinesResourceKeys.CONFIGURED_COW_TYPE).orElseThrow().getKey(randomType));
-            }
+            if (this.getLoveCause() != null)
+                BovinesCriteriaTriggers.MUTATION.trigger(this.getLoveCause(), this, otherParent, child, (Holder) randomType);
             return randomType;
         }
 
@@ -338,44 +360,61 @@ public class Moobloom extends Cow {
         return this.getMoobloomType();
     }
 
+    public void addParticlePosition(Vec3 pos) {
+        particlePositions.add(pos);
+    }
+
+    public void createParticles() {
+        if (!getMoobloomType().isBound() || getMoobloomType().value().configuration().settings().particle().isEmpty())
+            return;
+
+        if (particlePositions.isEmpty() && !level().isClientSide())
+            ((ServerLevel)this.level()).sendParticles(getMoobloomType().value().configuration().settings().particle().get(), getX(), getY(0.5), getZ(), 6, 0.05, 0.05, 0.05, 0.01);
+
+        for (Vec3 pos : particlePositions)
+            createParticleTrail(pos, getMoobloomType().value().configuration().settings().particle().get());
+
+        particlePositions.clear();
+    }
+
     public void createParticleTrail(Vec3 pos, ParticleOptions options) {
-        double value = (1 - (1 / (pos.distanceTo(this.position()) + 1))) / 4;
+        double value = (1 - (1 / (pos.distanceTo(position()) + 1))) / 4;
 
         for (double d = 0.0; d < 1.0; d += value) {
-            ((ServerLevel)this.level()).sendParticles(options, Mth.lerp(d, pos.x(), this.position().x()), Mth.lerp(d, pos.y(), this.position().y()), Mth.lerp(d, pos.z(), this.position().z()), 1, 0.05, 0.05,  0.05, 0.01);
+            ((ServerLevel)level()).sendParticles(options, Mth.lerp(d, pos.x(), position().x()), Mth.lerp(d, pos.y(), position().y()), Mth.lerp(d, pos.z(), position().z()), 1, 0.05, 0.05,  0.05, 0.01);
         }
     }
 
     @Override
     public Moobloom getBreedOffspring(ServerLevel serverLevel, AgeableMob ageableMob) {
-        Moobloom moobloom = BovinesEntityTypes.MOOBLOOM.value().create(serverLevel);
-        moobloom.setFlowerType(this.chooseBabyType(serverLevel, (Moobloom)ageableMob, moobloom), serverLevel);
+        Moobloom moobloom = BovinesEntityTypes.MOOBLOOM.create(serverLevel);
+        moobloom.setFlowerType(chooseBabyType(serverLevel, (Moobloom)ageableMob, moobloom), serverLevel);
         return moobloom;
     }
 
     public boolean commonReadyForShearing() {
-        return this.isAlive() && !this.isBaby() && this.entityData.get(ALLOW_SHEARING);
+        return isAlive() && !isBaby() && entityData.get(ALLOW_SHEARING);
     }
 
-    public ConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>> getMoobloomType() {
+    public Holder<CowType<MoobloomConfiguration>> getMoobloomType() {
         try {
-            Registry<ConfiguredCowType<?, ?>> registry = this.level().registryAccess().registry(BovinesResourceKeys.CONFIGURED_COW_TYPE).orElseThrow();
-            if (this.type != null && getTypeId() != null && registry.containsKey(new ResourceLocation(getTypeId())) && registry.get(new ResourceLocation(getTypeId())).configuration() instanceof MoobloomConfiguration && this.type.configuration() != registry.get(new ResourceLocation(getTypeId())).configuration()) {
-                this.type = (ConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>>) registry.get(new ResourceLocation(getTypeId()));
-                return this.type;
-            } else if (this.type != null) {
-                return this.type;
+            Registry<CowType<?>> registry = this.level().registryAccess().registry(BovinesRegistryKeys.COW_TYPE).orElseThrow();
+            if (type != null && type.isBound() && getTypeId() != null && registry.containsKey(new ResourceLocation(getTypeId())) && registry.get(new ResourceLocation(getTypeId())).configuration() instanceof MoobloomConfiguration && type.value().configuration() != registry.get(new ResourceLocation(getTypeId())).configuration()) {
+                type = registry.getHolder(new ResourceLocation(getTypeId())).orElseThrow();
+                return (Holder) type;
+            } else if (type != null && type.isBound()) {
+                return (Holder) type;
             } else if (getTypeId() != null && registry.containsKey(new ResourceLocation(getTypeId())) && registry.get(new ResourceLocation(getTypeId())).configuration() instanceof MoobloomConfiguration) {
-                this.type = (ConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>>) registry.get(new ResourceLocation(getTypeId()));
-                return this.type;
+                type = registry.getHolder(new ResourceLocation(getTypeId())).orElseThrow();
+                return (Holder) type;
             }
-            this.type = BovinesCowTypes.MOOBLOOM_TYPE.value().defaultConfigured().get();
+            type = level().registryAccess().registry(BovinesRegistryKeys.COW_TYPE).orElseThrow().getHolder(BovinesCowTypes.MoobloomKeys.MISSING_MOOBLOOM).orElseThrow();
             BovinesAndButtercups.LOG.warn("Could not find type '{}' from moobloom at {}. Setting type to 'bovinesandbuttercups:missing_moobloom'.", ResourceLocation.tryParse(getTypeId()), position());
-            return this.type;
+            return (Holder)type;
         } catch (Exception e) {
-            this.type = BovinesCowTypes.MOOBLOOM_TYPE.value().defaultConfigured().get();
+            type = level().registryAccess().registry(BovinesRegistryKeys.COW_TYPE).orElseThrow().getHolder(BovinesCowTypes.MoobloomKeys.MISSING_MOOBLOOM).orElseThrow();
             BovinesAndButtercups.LOG.warn("Could not get type '{}' from moobloom at {}. Setting type to 'bovinesandbuttercups:missing_moobloom'. {}", ResourceLocation.tryParse(getTypeId()), position(), e.getMessage());
-            return this.type;
+            return (Holder)type;
         }
     }
 
@@ -396,8 +435,8 @@ public class Moobloom extends Cow {
         this.getMoobloomType();
     }
 
-    public void setFlowerType(ConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>> value, LevelAccessor level) {
-        this.entityData.set(TYPE_ID, level.registryAccess().registry(BovinesResourceKeys.CONFIGURED_COW_TYPE).orElseThrow().getKey(value).toString());
+    public void setFlowerType(Holder<CowType<MoobloomConfiguration>> value, LevelAccessor level) {
+        this.entityData.set(TYPE_ID, value.getRegisteredName());
         this.getMoobloomType();
     }
 
@@ -425,92 +464,23 @@ public class Moobloom extends Cow {
         this.entityData.set(ALLOW_SHEARING, value);
     }
 
-    @Override
-    @Nullable
-    public SpawnGroupData finalizeSpawn(ServerLevelAccessor level, DifficultyInstance difficulty, MobSpawnType spawnType, @Nullable SpawnGroupData entityData, @Nullable CompoundTag entityTag) {
-        if (entityTag == null || !entityTag.contains("Type")) {
-            if (getTotalSpawnWeight(level(), this.blockPosition()) > 0) {
-                this.setFlowerType(getMoobloomSpawnTypeDependingOnBiome(level(), this.blockPosition(), this.getRandom()), level());
-            } else {
-                this.setFlowerType(getMoobloomSpawnType(level(), this.getRandom()), level());
-            }
-        }
-        return super.finalizeSpawn(level, difficulty, spawnType, entityData, entityTag);
-    }
-
     public static int getTotalSpawnWeight(LevelAccessor level, BlockPos pos) {
         int totalWeight = 0;
 
-        for (ConfiguredCowType<?, ?> cowType : level.registryAccess().registry(BovinesResourceKeys.CONFIGURED_COW_TYPE).orElseThrow().stream().filter(configuredCowType -> configuredCowType.configuration() instanceof MoobloomConfiguration).toList()) {
-            if (!(cowType.configuration() instanceof MoobloomConfiguration configuration)) continue;
+        for (CowType<?> cowType : level.registryAccess().registry(BovinesRegistryKeys.COW_TYPE).orElseThrow().stream().filter(configuredCowType -> configuredCowType.configuration() instanceof MoobloomConfiguration).toList()) {
+            if (!(cowType.configuration() instanceof MoobloomConfiguration configuration))
+                continue;
 
-            if (configuration.settings().naturalSpawnWeight() > 0 && configuration.settings().biomes().isPresent() && HolderUtil.containsBiomeHolder(level.getBiome(pos), configuration.settings().biomes().get())) {
-                totalWeight += configuration.settings().naturalSpawnWeight();
-            }
+            Optional<WeightedEntry.Wrapper<HolderSet<Biome>>> biome = configuration.settings().biomes().stream().filter(holderSetWrapper -> holderSetWrapper.data().contains(level.getBiome(pos))).findFirst();
+            if (biome.isPresent())
+                totalWeight += biome.get().weight().asInt();
         }
         return totalWeight;
     }
 
-    public ConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>> getMoobloomSpawnType(LevelAccessor level, RandomSource random) {
-        int totalWeight = 0;
-
-        List<ConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>>> moobloomList = new ArrayList<>();
-
-        for (ConfiguredCowType<?, ?> configuredCowType : level.registryAccess().registry(BovinesResourceKeys.CONFIGURED_COW_TYPE).orElseThrow().stream().filter(configuredCowType -> configuredCowType.configuration() instanceof MoobloomConfiguration).toList()) {
-            if (!(configuredCowType.configuration() instanceof MoobloomConfiguration configuration)) continue;
-
-            if (configuration.settings().naturalSpawnWeight() > 0) {
-                moobloomList.add((ConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>>) configuredCowType);
-                totalWeight += configuration.settings().naturalSpawnWeight();
-            }
-        }
-
-        if (moobloomList.size() == 1) {
-            return moobloomList.get(0);
-        } else if (!moobloomList.isEmpty()) {
-            int r = Mth.nextInt(random, 0, totalWeight - 1);
-            for (ConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>> cfc : moobloomList) {
-                r -= cfc.configuration().settings().naturalSpawnWeight();
-                if (r < 0.0) {
-                    return cfc;
-                }
-            }
-        }
-        return (ConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>>) level.registryAccess().registry(BovinesResourceKeys.CONFIGURED_COW_TYPE).orElseThrow().get(BovinesCowTypes.MOOBLOOM_TYPE.value().defaultConfiguredId());
-    }
-
-    public ConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>> getMoobloomSpawnTypeDependingOnBiome(LevelAccessor level, BlockPos pos, RandomSource random) {
-        List<ConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>>> moobloomList = new ArrayList<>();
-        int totalWeight = 0;
-
-        for (Map.Entry<ResourceKey<ConfiguredCowType<?, ?>>, ConfiguredCowType<?, ?>> entry : level.registryAccess().registry(BovinesResourceKeys.CONFIGURED_COW_TYPE).orElseThrow().entrySet().stream().filter(configuredCowType -> configuredCowType.getValue().configuration() instanceof MoobloomConfiguration).toList()) {
-            ConfiguredCowType<?, ?> configuredCowType = entry.getValue();
-            if (!(configuredCowType.configuration() instanceof MoobloomConfiguration configuration)) continue;
-
-            if (configuration.settings().naturalSpawnWeight() > 0 && configuration.settings().biomes().isPresent() && HolderUtil.containsBiomeHolder(level.getBiome(pos), configuration.settings().biomes().get())) {
-                moobloomList.add((ConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>>) configuredCowType);
-                totalWeight += configuration.settings().naturalSpawnWeight();
-            }
-        }
-
-        if (moobloomList.size() == 1) {
-            return moobloomList.get(0);
-        } else if (!moobloomList.isEmpty()) {
-            int r = Mth.nextInt(random, 0, totalWeight - 1);
-            for (ConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>> cfc : moobloomList) {
-                r -= cfc.configuration().settings().naturalSpawnWeight();
-                if (r < 0.0) {
-                    return cfc;
-                }
-            }
-        }
-        return (ConfiguredCowType<MoobloomConfiguration, CowType<MoobloomConfiguration>>)level.registryAccess().registry(BovinesResourceKeys.CONFIGURED_COW_TYPE).orElseThrow().get(BovinesAndButtercups.asResource("missing_moobloom"));
-    }
-
     public List<ItemStack> commonShear(SoundSource category) {
-        // Implemented in FlowerCowFabriclike and FlowerCowForge
         List<ItemStack> stacks = new ArrayList<>();
-        this.level().playSound(null, this, BovinesSoundEvents.MOOBLOOM_SHEAR.value(), category, 1.0f, 1.0f);
+        this.level().playSound(null, this, BovinesSoundEvents.MOOBLOOM_SHEAR, category, 1.0f, 1.0f);
         if (!this.level().isClientSide) {
             ((ServerLevel)this.level()).sendParticles(ParticleTypes.EXPLOSION, this.getX(), this.getY(0.5), this.getZ(), 1, 0.0, 0.0, 0.0, 0.0);
             this.discard();
@@ -529,19 +499,26 @@ public class Moobloom extends Cow {
                 cowEntity.setInvulnerable(this.isInvulnerable());
                 this.level().addFreshEntity(cowEntity);
                 for (int i = 0; i < 5; ++i) {
-                    if (this.getMoobloomType().configuration().flower().blockState().isPresent()) {
-                        stacks.add(new ItemStack(this.getMoobloomType().configuration().flower().blockState().get().getBlock()));
-                    } else if (this.getMoobloomType().configuration().flower().customType().isPresent()) {
-                        ItemStack itemStack = new ItemStack(BovinesItems.CUSTOM_FLOWER.value());
-                        CompoundTag compound = new CompoundTag();
-                        compound.putString("Type", level().registryAccess().registry(BovinesResourceKeys.CUSTOM_FLOWER_TYPE).orElseThrow().getKey(this.getMoobloomType().configuration().flower().customType().get().value()).toString());
-                        itemStack.getOrCreateTag().put("BlockEntityTag", compound);
+                    if (getMoobloomType().value().configuration().flower().blockState().isPresent()) {
+                        stacks.add(new ItemStack(getMoobloomType().value().configuration().flower().blockState().get().getBlock()));
+                    } else if (getMoobloomType().value().configuration().flower().customType().isPresent()) {
+                        ItemStack itemStack = new ItemStack(BovinesItems.CUSTOM_FLOWER);
+                        itemStack.set(BovinesDataComponents.CUSTOM_FLOWER, new ItemCustomFlower(getMoobloomType().value().configuration().flower().customType().get()));
                         stacks.add(itemStack);
                     }
                 }
             }
         }
         return stacks;
+    }
+
+    @Override
+    public SpawnGroupData finalizeSpawn(ServerLevelAccessor level, DifficultyInstance difficulty, MobSpawnType spawnType, @Nullable SpawnGroupData data) {
+        if (data == null) {
+            data = new MoobloomGroupData();
+        }
+        this.setFlowerType(((MoobloomGroupData)data).getSpawnType(blockPosition(), level, level.getRandom()), level);
+        return super.finalizeSpawn(level, difficulty, spawnType, data);
     }
 
     public class LookAtBeeGoal extends Goal {
@@ -557,6 +534,64 @@ public class Moobloom extends Cow {
         @Override
         public void start() {
             Moobloom.this.getNavigation().stop();
+        }
+    }
+
+    public static class MoobloomGroupData extends AgeableMob.AgeableMobGroupData {
+        public MoobloomGroupData() {
+            super(true);
+        }
+
+        public Holder<CowType<MoobloomConfiguration>> getSpawnType(BlockPos pos, ServerLevelAccessor level, RandomSource random) {
+            if (getTotalSpawnWeight(level, pos) > 0)
+                return getMoobloomSpawnTypeDependingOnBiome(level, pos, random);
+            else
+                return getMostCommonMoobloomSpawnType(level, random);
+        }
+
+        public Holder<CowType<MoobloomConfiguration>> getMostCommonMoobloomSpawnType(ServerLevelAccessor level, RandomSource random) {
+            int largestWeight = 0;
+            Holder<CowType<?>> finalCowType = level.registryAccess().registry(BovinesRegistryKeys.COW_TYPE).orElseThrow().getHolder(BovinesCowTypes.MoobloomKeys.MISSING_MOOBLOOM).get();
+
+            for (Holder<CowType<?>> cowType : level.registryAccess().registry(BovinesRegistryKeys.COW_TYPE).orElseThrow().holders().filter(configuredCowType -> configuredCowType.isBound() && configuredCowType.value().configuration() instanceof MoobloomConfiguration).toList()) {
+                if (!(cowType.value().configuration() instanceof MoobloomConfiguration configuration)) continue;
+
+                int max = configuration.settings().biomes().stream().map(wrapper -> wrapper.weight().asInt()).max(Comparator.comparingInt(value -> value)).orElse(0);
+                if (max > largestWeight) {
+                    finalCowType = cowType;
+                    largestWeight = max;
+                }
+            }
+
+            return (Holder)finalCowType;
+        }
+
+        public Holder<CowType<MoobloomConfiguration>> getMoobloomSpawnTypeDependingOnBiome(ServerLevelAccessor level, BlockPos pos, RandomSource random) {
+            List<Holder<CowType<MoobloomConfiguration>>> moobloomList = new ArrayList<>();
+            int totalWeight = 0;
+
+            for (Holder.Reference<CowType<?>> cowType : level.registryAccess().registry(BovinesRegistryKeys.COW_TYPE).orElseThrow().holders().filter(configuredCowType -> configuredCowType.isBound() && configuredCowType.value().configuration() instanceof MoobloomConfiguration).toList()) {
+                if (!(cowType.value().configuration() instanceof MoobloomConfiguration configuration)) continue;
+
+                Optional<WeightedEntry.Wrapper<HolderSet<Biome>>> biome = configuration.settings().biomes().stream().filter(holderSetWrapper -> holderSetWrapper.data().contains(level.getBiome(pos))).findFirst();
+                if (biome.isPresent()) {
+                    moobloomList.add((Holder) cowType);
+                    totalWeight += biome.get().weight().asInt();
+                }
+            }
+
+            if (moobloomList.size() == 1) {
+                return moobloomList.getFirst();
+            } else if (!moobloomList.isEmpty()) {
+                int r = Mth.nextInt(random, 0, totalWeight - 1);
+                for (Holder<CowType<MoobloomConfiguration>> cowType : moobloomList) {
+                    int max = cowType.value().configuration().settings().biomes().stream().filter(wrapper -> wrapper.data().contains(level.getBiome(pos))).map(wrapper -> wrapper.weight().asInt()).max(Comparator.comparingInt(value -> value)).orElse(0);
+                    r -= max;
+                    if (r < 0.0)
+                        return cowType;
+                }
+            }
+            return (Holder)level.registryAccess().registry(BovinesRegistryKeys.COW_TYPE).orElseThrow().getHolder(BovinesCowTypes.MoobloomKeys.MISSING_MOOBLOOM).get();
         }
     }
 }
